--- a/src/2-form.html
+++ b/src/2-form.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>goit-js-hw-09</title>
+  <title>Page 2</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
   <section>
-    <a href="./1-gallery.html">Next page</a>
-    <h1>Go to gallery-page</h1>
+    <a href="./index.html">Go to home</a>
+    <h1>Welcome to form-page!</h1>
+    <a href="./1-gallery.html">Previous page</a>
   </section>
 </body>
 
