--- a/src/2-form.html
+++ b/src/2-form.html
@@ -15,6 +15,20 @@
     <h1>Welcome to form-page!</h1>
     <a href="./1-gallery.html">Previous page</a>
   </section>
+
+  <form class="feedback-form" autocomplete="off">
+    <label>
+      Email
+      <input type="email" name="email" autofocus />
+    </label>
+    <label>
+      Message
+      <textarea name="message" rows="8"></textarea>
+    </label>
+    <button type="submit">Submit</button>
+  </form>
+
+  <script src="./js/2-form.js" type="module"></script>
 </body>
 
 </html>
